change h1 font and font naming

--- a/css/main.scss
+++ b/css/main.scss
@@ -80,6 +80,7 @@ a {
             margin-top: 0;
             font-size: 3em;
             letter-spacing: 1px;
+            font-family: GreycliffCF-Medium;
         }
 
         h4 {
