--- a/_sass/_fonts.scss
+++ b/_sass/_fonts.scss
@@ -1,23 +1,23 @@
 @font-face {
-    font-family: Greycliff;
+    font-family: GreycliffCF-Light;
     src: url("../fonts/GreycliffCF-Light.woff2") format("woff2"),
         url("../fonts/GreycliffCF-Light.woff") format("woff");
 }
 
 @font-face {
-    font-family: Greycliff;
+    font-family: GreycliffCF-LightOblique;
     src: url("../fonts/GreycliffCF-LightOblique.woff2") format("woff2"),
         url("../fonts/GreycliffCF-LightOblique.woff") format("woff");
 }
 
 @font-face {
-    font-family: Greycliff;
+    font-family: GreycliffCF-DemiBold;
     src: url("../fonts/GreycliffCF-DemiBold.woff2") format("woff2"),
         url("../fonts/GreycliffCF-DemiBold.woff") format("woff");
 }
 
 @font-face {
-    font-family: Greycliff;
+    font-family: GreycliffCF-Medium;
     src: url("../fonts/GreycliffCF-Medium.woff2") format("woff2"),
         url("../fonts/GreycliffCF-Medium.woff") format("woff");
 }
